--- a/scikit_example/ch05/so_xml_to_tsv.ipynb
+++ b/scikit_example/ch05/so_xml_to_tsv.ipynb
@@ -110,7 +110,7 @@
     "    root = next(it)  # get posts element\n",
     "\n",
     "    for elem in it:\n",
-    "        if counter % 100000 == 0:\n",
+    "        if counter == 1000000:\n",
     "            print(\"Processed %i <row/> elements\" % counter)\n",
     "\n",
     "        counter += 1\n",
@@ -215,157 +215,7 @@
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processed 0 <row/> elements\n",
-      "Processed 100000 <row/> elements\n",
-      "Processed 200000 <row/> elements\n",
-      "Processed 300000 <row/> elements\n",
-      "Processed 400000 <row/> elements\n",
-      "Processed 500000 <row/> elements\n",
-      "Processed 600000 <row/> elements\n",
-      "Processed 700000 <row/> elements\n",
-      "Processed 800000 <row/> elements\n",
-      "Processed 900000 <row/> elements\n",
-      "Processed 1000000 <row/> elements\n",
-      "Processed 1100000 <row/> elements\n",
-      "Processed 1200000 <row/> elements\n",
-      "Processed 1300000 <row/> elements\n",
-      "Processed 1400000 <row/> elements\n",
-      "Processed 1500000 <row/> elements\n",
-      "Processed 1600000 <row/> elements\n",
-      "Processed 1700000 <row/> elements\n",
-      "Processed 1800000 <row/> elements\n",
-      "Processed 1900000 <row/> elements\n",
-      "Processed 2000000 <row/> elements\n",
-      "Processed 2100000 <row/> elements\n",
-      "Processed 2200000 <row/> elements\n",
-      "Processed 2300000 <row/> elements\n",
-      "Processed 2400000 <row/> elements\n",
-      "Processed 2500000 <row/> elements\n",
-      "Processed 2600000 <row/> elements\n",
-      "Processed 2700000 <row/> elements\n",
-      "Processed 2800000 <row/> elements\n",
-      "Processed 2900000 <row/> elements\n",
-      "Processed 3000000 <row/> elements\n",
-      "Processed 3100000 <row/> elements\n",
-      "Processed 3200000 <row/> elements\n",
-      "Processed 3300000 <row/> elements\n",
-      "Processed 3400000 <row/> elements\n",
-      "Processed 3500000 <row/> elements\n",
-      "Processed 3600000 <row/> elements\n",
-      "Processed 3700000 <row/> elements\n",
-      "Processed 3800000 <row/> elements\n",
-      "Processed 3900000 <row/> elements\n",
-      "Processed 4000000 <row/> elements\n",
-      "Processed 4100000 <row/> elements\n",
-      "Processed 4200000 <row/> elements\n",
-      "Processed 4300000 <row/> elements\n",
-      "Processed 4400000 <row/> elements\n",
-      "Processed 4500000 <row/> elements\n",
-      "Processed 4600000 <row/> elements\n",
-      "Processed 4700000 <row/> elements\n",
-      "Processed 4800000 <row/> elements\n",
-      "Processed 4900000 <row/> elements\n",
-      "Processed 5000000 <row/> elements\n",
-      "Processed 5100000 <row/> elements\n",
-      "Processed 5200000 <row/> elements\n",
-      "Processed 5300000 <row/> elements\n",
-      "Processed 5400000 <row/> elements\n",
-      "Processed 5500000 <row/> elements\n",
-      "Processed 5600000 <row/> elements\n",
-      "Processed 5700000 <row/> elements\n",
-      "Processed 5800000 <row/> elements\n",
-      "Processed 5900000 <row/> elements\n",
-      "Processed 6000000 <row/> elements\n",
-      "Processed 6100000 <row/> elements\n",
-      "Processed 6200000 <row/> elements\n",
-      "Processed 6300000 <row/> elements\n",
-      "Processed 6400000 <row/> elements\n",
-      "Processed 6500000 <row/> elements\n",
-      "Processed 6600000 <row/> elements\n",
-      "Processed 6700000 <row/> elements\n",
-      "Processed 6800000 <row/> elements\n",
-      "Processed 6900000 <row/> elements\n",
-      "Processed 7000000 <row/> elements\n",
-      "Processed 7100000 <row/> elements\n",
-      "Processed 7200000 <row/> elements\n",
-      "Processed 7300000 <row/> elements\n",
-      "Processed 7400000 <row/> elements\n",
-      "Processed 7500000 <row/> elements\n",
-      "Processed 7600000 <row/> elements\n",
-      "Processed 7700000 <row/> elements\n",
-      "Processed 7800000 <row/> elements\n",
-      "Processed 7900000 <row/> elements\n",
-      "Processed 8000000 <row/> elements\n",
-      "Processed 8100000 <row/> elements\n",
-      "Processed 8200000 <row/> elements\n",
-      "Processed 8300000 <row/> elements\n",
-      "Processed 8400000 <row/> elements\n",
-      "Processed 8500000 <row/> elements\n",
-      "Processed 8600000 <row/> elements\n",
-      "Processed 8700000 <row/> elements\n",
-      "Processed 8800000 <row/> elements\n",
-      "Processed 8900000 <row/> elements\n",
-      "Processed 9000000 <row/> elements\n",
-      "Processed 9100000 <row/> elements\n",
-      "Processed 9200000 <row/> elements\n",
-      "Processed 9300000 <row/> elements\n",
-      "Processed 9400000 <row/> elements\n",
-      "Processed 9500000 <row/> elements\n",
-      "Processed 9600000 <row/> elements\n",
-      "Processed 9700000 <row/> elements\n",
-      "Processed 9800000 <row/> elements\n",
-      "Processed 9900000 <row/> elements\n",
-      "Processed 10000000 <row/> elements\n",
-      "Processed 10100000 <row/> elements\n",
-      "Processed 10200000 <row/> elements\n",
-      "Processed 10300000 <row/> elements\n",
-      "Processed 10400000 <row/> elements\n",
-      "Processed 10500000 <row/> elements\n",
-      "Processed 10600000 <row/> elements\n",
-      "Processed 10700000 <row/> elements\n",
-      "Processed 10800000 <row/> elements\n",
-      "Processed 10900000 <row/> elements\n",
-      "Processed 11000000 <row/> elements\n",
-      "Processed 11100000 <row/> elements\n",
-      "Processed 11200000 <row/> elements\n",
-      "Processed 11300000 <row/> elements\n",
-      "Processed 11400000 <row/> elements\n",
-      "Processed 11500000 <row/> elements\n",
-      "Processed 11600000 <row/> elements\n",
-      "Processed 11700000 <row/> elements\n",
-      "Processed 11800000 <row/> elements\n",
-      "Processed 11900000 <row/> elements\n",
-      "Processed 12000000 <row/> elements\n",
-      "Processed 12100000 <row/> elements\n",
-      "Processed 12200000 <row/> elements\n",
-      "Processed 12300000 <row/> elements\n",
-      "Processed 12400000 <row/> elements\n",
-      "Processed 12500000 <row/> elements\n",
-      "Processed 12600000 <row/> elements\n",
-      "Processed 12700000 <row/> elements\n",
-      "Processed 12800000 <row/> elements\n",
-      "Processed 12900000 <row/> elements\n",
-      "Processed 13000000 <row/> elements\n",
-      "Processed 13100000 <row/> elements\n",
-      "Processed 13200000 <row/> elements\n",
-      "Processed 13300000 <row/> elements\n",
-      "Processed 13400000 <row/> elements\n",
-      "Processed 13500000 <row/> elements\n",
-      "Processed 13600000 <row/> elements\n",
-      "Processed 13700000 <row/> elements\n",
-      "Processed 13800000 <row/> elements\n",
-      "Processed 13900000 <row/> elements\n",
-      "Processed 14000000 <row/> elements\n",
-      "Processed 14100000 <row/> elements\n",
-      "Processed 14200000 <row/> elements\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(filename_filtered, \"w\") as f:\n",
     "    for values in parsexml(filename):\n",
@@ -406,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.4.4"
   }
  },
  "nbformat": 4,
